--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -7,9 +6,7 @@
 header .first_header {
   display: flex;
   padding: 10px 0 20px;
-}
-header .first_header .hamburgar {
-  width: 25%;
+  vertical-align: middle;
 }
 header .first_header .logo {
   text-align: center;
@@ -18,12 +15,99 @@ header .first_header .logo {
   margin: 0 auto;
 }
 header .first_header .logo img {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
 }
 header .first_header .cart {
   position: absolute;
   right: 10px;
+  font-size: 24px;
+}
+header .first_header .hamburger_box .hamburger {
+  display: block;
+  position: fixed;
+  z-index: 3;
+  left: 13px;
+  top: 8px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  text-align: center;
+}
+header .first_header .hamburger_box .hamburger span {
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 4px;
+  border-radius: 16px;
+  background: #555;
+  transition: 0.3s ease-in-out;
+}
+header .first_header .hamburger_box .hamburger span:nth-child(1) {
+  top: 10px;
+}
+header .first_header .hamburger_box .hamburger span:nth-child(2) {
+  top: 20px;
+}
+header .first_header .hamburger_box .hamburger span:nth-child(3) {
+  top: 30px;
+}
+header .first_header .hamburger_box .hamburger.active {
+  transition: all 0.3s ease-in-out;
+  transition-delay: 0.6s;
+  transform: rotate(45deg);
+}
+header .first_header .hamburger_box .hamburger.active span:nth-child(2) {
+  width: 0px;
+}
+header .first_header .hamburger_box .hamburger.active span:nth-child(1), header .first_header .hamburger_box .hamburger.active span:nth-child(3) {
+  transition-delay: 0.3s;
+}
+header .first_header .hamburger_box .hamburger.active span:nth-child(1) {
+  transform: translateY(4px);
+}
+header .first_header .hamburger_box .hamburger.active span:nth-child(3) {
+  transform: translateY(-16px) rotate(90deg);
+}
+header .first_header .hamburger_box nav.globalMenuSp {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  color: #000;
+  background: #fff;
+  text-align: center;
+  transform: translateX(-100%);
+  transition: all 0.9s;
+  width: 100%;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul {
+  background: #ccc;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul li {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+  border-bottom: 1px solid #fff;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul li:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul li:hover {
+  background: #ddd;
+}
+header .first_header .hamburger_box nav.globalMenuSp ul li a {
+  display: block;
+  color: #000;
+  padding: 1em 0;
+  text-decoration: none;
+}
+header .first_header .hamburger_box nav.globalMenuSp.active {
+  transform: translateX(0%);
 }
 header .second_header {
   background: #000;
@@ -38,108 +122,6 @@ header .second_header ul {
 header .second_header ul li {
   list-style: none;
   padding: 16px;
-}
-
-.hamburger {
-  display: block;
-  position: fixed;
-  z-index: 3;
-  left: 13px;
-  top: 8px;
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
-  text-align: center;
-}
-.hamburger span {
-  display: block;
-  position: absolute;
-  width: 32px;
-  height: 2px;
-  left: 6px;
-  background: #555;
-  transition: 0.3s ease-in-out;
-}
-.hamburger span:nth-child(1) {
-  top: 10px;
-}
-.hamburger span:nth-child(2) {
-  top: 20px;
-}
-.hamburger span:nth-child(3) {
-  top: 30px;
-}
-
-/* ナビ開いてる時のボタン */
-.hamburger.active {
-  transition: all 0.3s ease-in-out;
-  transition-delay: 0.6s;
-  transform: rotate(45deg);
-}
-
-.hamburger.active span:nth-child(2) {
-  width: 0px;
-}
-
-.hamburger.active span:nth-child(1),
-.hamburger.active span:nth-child(3) {
-  transition-delay: 0.3s;
-}
-
-.hamburger.active span:nth-child(1) {
-  transform: translateY(4px);
-}
-
-.hamburger.active span:nth-child(3) {
-  transform: translateY(-16px) rotate(90deg);
-}
-
-nav.globalMenuSp {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  color: #000;
-  background: #fff;
-  text-align: center;
-  transform: translateX(100%);
-  transition: all 0.9s;
-  width: 100%;
-}
-
-nav.globalMenuSp ul {
-  background: #ccc;
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-}
-
-nav.globalMenuSp ul li {
-  list-style-type: none;
-  padding: 0;
-  width: 100%;
-  border-bottom: 1px solid #fff;
-}
-
-nav.globalMenuSp ul li:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-
-nav.globalMenuSp ul li:hover {
-  background: #ddd;
-}
-
-nav.globalMenuSp ul li a {
-  display: block;
-  color: #000;
-  padding: 1em 0;
-  text-decoration: none;
-}
-
-/* このクラスを、jQueryで付与・削除する */
-nav.globalMenuSp.active {
-  transform: translateX(0%);
 }
 
 @media (max-width: 650px) {
