--- a/css/main.scss
+++ b/css/main.scss
@@ -7,22 +7,131 @@ header {
   .first_header {
     display: flex;
     padding: 10px 0 20px;
-    .hamburgar {
-      width: 25%;
-    }
+    vertical-align: middle;
     .logo {
       text-align: center;
       justify-content: center;
       align-items: center;
       margin: 0 auto;
       img {
-        width: 50%;
+        width: 40%;
         margin: 0 auto;
       }
     }
     .cart {
       position: absolute;
       right: 10px;
+      font-size: 24px;
+    }
+    .hamburger_box {
+      .hamburger {
+        display : block;
+        position: fixed;
+        z-index : 3;
+        left : 13px;
+        top   : 8px;
+        width : 24px;
+        height: 24px;
+        cursor: pointer;
+        text-align: center;
+        span {
+          display : block;
+          position: absolute;
+          width   : 30px;
+          height  : 4px;
+          border-radius: 16px;
+          background : #555;
+          -webkit-transition: 0.3s ease-in-out;
+          -moz-transition   : 0.3s ease-in-out;
+          transition        : 0.3s ease-in-out;
+          &:nth-child(1) {
+            top: 10px;
+          }
+          &:nth-child(2) {
+            top: 20px;
+          }
+          &:nth-child(3) {
+            top: 30px;
+          }
+        }
+        &.active {
+          -webkit-transition: all 0.3s ease-in-out;
+          -o-transition     : all 0.3s ease-in-out;
+          transition        : all 0.3s ease-in-out;
+          -webkit-transition-delay: 0.6s;
+          -o-transition-delay     : 0.6s;
+          transition-delay        : 0.6s;
+          -webkit-transform: rotate(45deg);
+          -ms-transform    : rotate(45deg);
+          -o-transform     : rotate(45deg);
+          transform        : rotate(45deg);
+          span {
+            &:nth-child(2) {
+              width: 0px;
+            }
+            &:nth-child(1),
+            &:nth-child(3){
+              -webkit-transition-delay: 0.3s;
+              -o-transition-delay: 0.3s;
+              transition-delay: 0.3s;
+            }
+            &:nth-child(1) {
+              -webkit-transform: translateY(4px);
+              -ms-transform    : translateY(4px);
+              -o-transform     : translateY(4px);
+              transform        : translateY(4px);
+            }
+            &:nth-child(3) {
+              -webkit-transform: translateY(-16px) rotate(90deg);
+              -ms-transform: translateY(-16px) rotate(90deg);
+              -o-transform : translateY(-16px) rotate(90deg);
+              transform    : translateY(-16px) rotate(90deg);
+            }
+          }
+        }
+      }
+      nav {
+        &.globalMenuSp {
+          position: fixed;
+          z-index : 2;
+          top  : 0;
+          left : 0;
+          color: #000;
+          background: #fff;
+          text-align: center;
+          transform: translateX(-100%);
+          transition: all .9s;
+          width: 100%;
+          ul {
+            background: #ccc;
+            margin: 0 auto;
+            padding: 0;
+            width: 100%;
+            li {
+              list-style-type: none;
+              padding: 0;
+              width: 100%;
+              border-bottom: 1px solid #fff;
+              &:last-child {
+                padding-bottom: 0;
+                border-bottom: none;
+              }
+              &:hover{
+                background :#ddd;
+              }
+              a {
+                display: block;
+                color: #000;
+                padding: 1em 0;
+                text-decoration :none;
+              }
+            }
+          }
+          &.active {
+            transform: translateX(0%);
+          }
+        }
+      }
     }
   }
   .second_header {
@@ -41,120 +150,7 @@ header {
   }
 }
 
-.hamburger {
-  display : block;
-  position: fixed;
-  z-index : 3;
-  left : 13px;
-  top   : 8px;
-  width : 32px;
-  height: 32px;
-  cursor: pointer;
-  text-align: center;
-  span {
-    display : block;
-    position: absolute;
-    width   : 32px;
-    height  : 2px;
-    left    : 6px;
-    background : #555;
-    -webkit-transition: 0.3s ease-in-out;
-    -moz-transition   : 0.3s ease-in-out;
-    transition        : 0.3s ease-in-out;
-    &:nth-child(1) {
-      top: 10px;
-    }
-    &:nth-child(2) {
-      top: 20px;
-    }
-    &:nth-child(3) {
-      top: 30px;
-    }
-  }
-}
 
-/* ナビ開いてる時のボタン */
-.hamburger.active {
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition     : all 0.3s ease-in-out;
-  transition        : all 0.3s ease-in-out;
-  -webkit-transition-delay: 0.6s;
-  -o-transition-delay     : 0.6s;
-  transition-delay        : 0.6s;
-  -webkit-transform: rotate(45deg);
-  -ms-transform    : rotate(45deg);
-  -o-transform     : rotate(45deg);
-  transform        : rotate(45deg);
-}
-.hamburger.active span:nth-child(2){
-  width: 0px;
-}
-.hamburger.active span:nth-child(1),
-.hamburger.active span:nth-child(3){
-  -webkit-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
-  transition-delay: 0.3s;
-}
-.hamburger.active span:nth-child(1){
-  -webkit-transform: translateY(4px);
-  -ms-transform    : translateY(4px);
-  -o-transform     : translateY(4px);
-  transform        : translateY(4px);
-}
-
-.hamburger.active span:nth-child(3){
-  -webkit-transform: translateY(-16px) rotate(90deg);
-  -ms-transform: translateY(-16px) rotate(90deg);
-  -o-transform : translateY(-16px) rotate(90deg);
-  transform    : translateY(-16px) rotate(90deg);
-}
-
-
-nav.globalMenuSp {
-  position: fixed;
-  z-index : 2;
-  top  : 0;
-  left : 0;
-  color: #000;
-  background: #fff;
-  text-align: center;
-  transform: translateX(100%);
-  transition: all .9s;
-  width: 100%;
-}
-
-nav.globalMenuSp ul {
-  background: #ccc;
-  margin: 0 auto;
-  padding: 0;
-  width: 100%;
-}
-
-nav.globalMenuSp ul li {
-  list-style-type: none;
-  padding: 0;
-  width: 100%;
-  border-bottom: 1px solid #fff;
-}
-nav.globalMenuSp ul li:last-child {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-nav.globalMenuSp ul li:hover{
-  background :#ddd;
-}
-
-nav.globalMenuSp ul li a {
-  display: block;
-  color: #000;
-  padding: 1em 0;
-  text-decoration :none;
-}
-
-/* このクラスを、jQueryで付与・削除する */
-nav.globalMenuSp.active {
-  transform: translateX(0%);
-}
 
 @media (max-width: 650px) {
   .hidden {
