--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,20 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
 }
 
 header .first_header {
   display: flex;
-  padding: 10px 0 20px;
-  vertical-align: middle;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #eee;
+  box-sizing: border-box;
+  padding: 20px 0;
 }
 header .first_header .logo {
   text-align: center;
@@ -20,8 +28,12 @@ header .first_header .logo img {
 }
 header .first_header .cart {
   position: absolute;
+  top: 8px;
   right: 10px;
-  font-size: 24px;
+  font-size: 32px;
+}
+header .first_header .cart a {
+  color: #000;
 }
 header .first_header .hamburger_box .hamburger {
   display: block;
@@ -109,19 +121,250 @@ header .first_header .hamburger_box nav.globalMenuSp ul li a {
 header .first_header .hamburger_box nav.globalMenuSp.active {
   transform: translateX(0%);
 }
-header .second_header {
+
+body {
+  font: 14px/2 "Open sans", sans-serif;
+  letter-spacing: 0.05em;
+}
+body .second_header {
+  position: relative;
+  top: 64px;
   background: #000;
   color: #fff;
   font-size: 16px;
 }
-header .second_header ul {
+body .second_header ul {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-header .second_header ul li {
+body .second_header ul li {
   list-style: none;
   padding: 16px;
+}
+body .btn {
+  display: inline-block;
+  padding: 13px 20px;
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  background: transparent;
+  border: 1px solid #e1e1e1;
+  font: 12px/1.2 "Oswald", sans-serif;
+  letter-spacing: 0.4em;
+  text-align: center;
+  text-indent: 2px;
+  text-transform: uppercase;
+  transition: color 0.1s linear 0.05s;
+}
+body .btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #e1e1e1;
+  z-index: 1;
+  opacity: 0;
+  transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s;
+}
+body .btn::after {
+  transition: border 0.1s linear 0.05s;
+}
+body .btn .btn-inner {
+  position: relative;
+  z-index: 2;
+}
+body .btn:hover {
+  color: #373737;
+  transition: color 0.1s linear 0s;
+}
+body .btn:hover::before {
+  top: 0;
+  height: 100%;
+  opacity: 1;
+  transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
+}
+body .btn:hover::after {
+  border-color: #373737;
+  transition: border 0.1s linear 0s;
+}
+body .slideshow {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+}
+body .slideshow .slideshow-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+body .slideshow .slides {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+body .slideshow .slide {
+  display: none;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+body .slideshow .slide.is-active {
+  display: block;
+}
+body .slideshow .slide.is-loaded {
+  opacity: 1;
+}
+body .slideshow .slide .caption {
+  padding: 0 100px;
+}
+body .slideshow .slide .image-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  z-index: 1;
+  background-size: cover;
+  image-rendering: optimizeQuality;
+}
+body .slideshow .slide .image-container::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+body .slideshow .slide .image {
+  width: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+}
+body .slideshow .slide-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .slideshow .slide .title {
+  margin: 0 auto 15px;
+  max-width: 1000px;
+  font: 300 50px/1.2 "Oswald", sans-serif;
+  letter-spacing: 0.35em;
+  text-transform: uppercase;
+}
+body .slideshow .slide .text {
+  margin: 0 auto;
+  max-width: 1000px;
+  font-size: 18px;
+  line-height: 1.4;
+}
+body .slideshow .slide .btn {
+  margin: 15px 0 0;
+  border-color: #fff;
+}
+body .slideshow .slide .btn::before {
+  background: #fff;
+}
+body .slideshow .pagination {
+  position: absolute;
+  bottom: 35px;
+  left: 0;
+  width: 100%;
+  height: 12px;
+  cursor: default;
+  z-index: 2;
+  text-align: center;
+}
+body .slideshow .pagination .item {
+  display: inline-block;
+  padding: 15px 5px;
+  position: relative;
+  width: 46px;
+  height: 32px;
+  cursor: pointer;
+  text-indent: -999em;
+  z-index: 1;
+}
+body .slideshow .pagination .item + .page {
+  margin-left: -2px;
+}
+body .slideshow .pagination .item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 15px;
+  left: 5px;
+  width: 36px;
+  height: 2px;
+  background: rgba(255, 255, 255, 0.5);
+  transition: background 0.2s ease;
+}
+body .slideshow .pagination .item::after {
+  width: 0;
+  background: #fff;
+  z-index: 2;
+  transition: width 0.2s ease;
+}
+body .slideshow .pagination .item:hover::before, body .slideshow .pagination .item.is-active::before {
+  background-color: #fff;
+}
+body .slideshow .arrows .arrow {
+  margin: -33px 0 0;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+  z-index: 3;
+}
+body .slideshow .arrows .prev {
+  left: 30px;
+}
+body .slideshow .arrows .prev:hover .svg {
+  left: -10px;
+}
+body .slideshow .arrows .next {
+  right: 30px;
+}
+body .slideshow .arrows .next:hover .svg {
+  left: 10px;
+}
+body .slideshow .arrows .svg {
+  position: relative;
+  left: 0;
+  width: 14px;
+  height: 26px;
+  fill: #fff;
+  transition: left 0.2s ease;
 }
 
 @media (max-width: 650px) {
