feat: 全体的なレイアウトの調整を行った
Message body
JSの読み込みができていないのを修正する

Message footer

--- a/css/main.css
+++ b/css/main.css
@@ -386,11 +386,15 @@ body main .information .infoItem .text {
 
 footer {
   margin-top: auto;
+  padding: 24px 0;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   background: #000;
   text-align: center;
+  color: #fff;
+  letter-spacing: 2px;
+  font-size: 10px;
 }
 
 @media (max-width: 650px) {
