--- a/css/main.scss
+++ b/css/main.scss
@@ -174,231 +174,106 @@ body {
     }
   }
   main {
-    .slideshow { 
-      overflow: hidden;
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      z-index: 1;
-      .btn {
-        display: inline-block;
-        padding: 13px 20px;
-        color: #fff;
-        text-decoration: none;
+    .slideShow {
+      .wrapper {
+        max-width: 100vw;
+        overflow: hidden;
+        width: 100%;
         position: relative;
-        background: transparent; 
-        border: 1px solid #e1e1e1;
-        font: 12px/1.2 "Oswald", sans-serif;
-        letter-spacing: 0.4em;
+        height: 600px;
+      }
+      .next,
+      .prev {
+        width: 40px;
+        height: 48px;
+        position: absolute;
+        bottom: 50%;
+        transition: all 0.3s;
+        z-index: 10;
+        cursor: pointer;
+        font-size: 24px;
         text-align: center;
-        text-indent: 2px;
-        text-transform: uppercase;
-        transition: color 0.1s linear 0.05s;
-        &::before {
+        &:after {
           content: "";
           display: block;
+          width: 16px;
+          height: 16px;
           position: absolute;
-          top: 50%;
-          left: 0;
-          width: 100%;
-          height: 1px;
-          background: #e1e1e1;
-          z-index: 1;
-          opacity: 0;
-          transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s;
         }
-        &::after {
-          transition:border 0.1s linear 0.05s;
+        i {
+          padding: 16px 8px;
+          background-color: rgba($color: #000000, $alpha: 0.3);
+          border-radius: 8px;
+          &:hover {
+            transition: all 0.4s;
+            background-color: rgba($color: #000000, $alpha: 0.6);
+            color: #fff;
+          }
         }
-        .btn-inner {
+      }
+      .next {
+        right: 16px;
+      }
+      .prev {
+        left: 16px;
+      }
+      .slider {
+        width: 400vw;
+        display: flex;
+        margin: 0 auto;
+      }
+      @for $i from 1 through 4 {
+        .slider#{$i} {
+          transition: transform 1s;
+        }
+      }
+      .slider1 {
+        transform: translateX(0);
+      }
+      .slider2 {
+        transform: translateX(-100vw);
+      }
+      .slider3 {
+        transform: translateX(-200vw);
+      }
+      .slider4 {
+        transform: translateX(-300vw);
+      }
+      .content {
+        width: 100%;
+        max-width: 100vw;
+        height: 600px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          width: 100vw;
+          height: 100%;
+          object-fit: fill;
+        }
+      }
+      .indicator {
+        width: 100%;
+        position: absolute;
+        bottom: 10px;
+        display: flex;
+        z-index: 10;
+        justify-content: center;
+        align-items: center;
+        li {
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
           position: relative;
-          z-index: 2;
-        }
-        &:hover {
-          color: #373737;
-          transition: color 0.1s linear 0s;
-          &::before {
-            top: 0;
-            height: 100%;
-            opacity: 1;
-            transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
-          }
-          &::after {
-            border-color: #373737;
-            transition:border 0.1s linear 0s;
-          }
-        }
-      }
-      .slideshow-inner { 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-      .slides { 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-      }
-      .slide { 
-        display: none;
-        overflow: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-        &.is-active {
-          display: block;
-        }
-        &.is-loaded{
-          opacity: 1;
-        }
-        .caption { 
-          padding: 0 100px;
-        }
-        .image-container { 
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-position: center;
-          z-index: 1;
-          background-size: cover;
-          image-rendering: optimizeQuality;
-
-          &::before { 
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-          }
-        }
-        .image {
-          width: 100%;
-          width: 100%;
-          object-fit: cover;
-          height: 100%;
-        }
-        &-content {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          z-index: 2;
-          color: #fff;
-          text-align: center;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-        .title { 
-          margin: 0 auto 15px;
-          max-width: 1000px;
-          font: 300 50px/1.2 "Oswald", sans-serif;
-          letter-spacing: 0.35em;
-          text-transform: uppercase;
-        }
-        .text {
-          margin: 0 auto;
-          max-width: 1000px;
-          font-size: 18px;
-          line-height: 1.4;
-        }
-        .btn {
-          margin: 15px 0 0;
-          border-color: #fff;
-          &::before {
-            background:#fff
-          }
-        }
-      }
-      .pagination { 
-        position: absolute;
-        bottom: 35px;
-        left: 0;
-        width: 100%;
-        height: 12px;
-        cursor: default;
-        z-index: 2;
-        text-align: center;
-        .item { 
-          display: inline-block;
-          padding: 15px 5px;
-          position: relative;
-          width: 46px;
-          height: 32px;
+          list-style: none;
+          border: 1px #000 solid;
+          margin-left: 10px;
+          margin-right: 10px;
           cursor: pointer;
-          text-indent: -999em;
-          z-index: 1;
-          + .page {
-            margin-left: -2px;
-          }
-          &::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 15px;
-            left: 5px;
-            width: 36px;
-            height: 2px;
-            background: rgba(255, 255, 255, 0.5);
-            transition: background 0.2s ease;
-          }
-          &::after {
-            width: 0;
-            background: #fff;
-            z-index: 2;
-            transition: width 0.2s ease;
-          }
-          &:hover::before,
-          &.is-active::before {
-            background-color: #fff;
-          }
         }
       }
-      .arrows {
-        .arrow {
-          margin: -33px 0 0;
-          padding: 20px;
-          position: absolute;
-          top: 50%;
-          cursor: pointer;
-          z-index: 3;
-        }
-        .prev {
-          left: 30px;
-          &:hover .svg {
-            left: -10px;
-          }
-        }
-        .next {
-          right: 30px;
-          &:hover .svg {
-            left: 10px;
-          }
-        }
-        .svg {
-          position: relative;
-          left: 0;
-          width: 14px;
-          height: 26px;
-          fill: #fff;
-          transition: left 0.2s ease;
-        }
+      #list1 {
+        background-color: #000;
       }
     }
     .information {
