--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ header .first_header .logo img {
 }
 header .first_header .cart {
   position: absolute;
-  top: 0;
+  top: 4px;
   right: 10px;
   font-size: 32px;
 }
@@ -126,22 +126,6 @@ body {
   position: relative;
   top: 70px;
 }
-body .second_header {
-  position: relative;
-  top: 64px;
-  background: #000;
-  color: #fff;
-  font-size: 16px;
-}
-body .second_header ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body .second_header ul li {
-  list-style: none;
-  padding: 16px;
-}
 body main .slideShow .wrapper {
   max-width: 100vw;
   overflow: hidden;
@@ -149,8 +133,8 @@ body main .slideShow .wrapper {
   position: relative;
   height: 600px;
 }
-body main .slideShow .next,
-body main .slideShow .prev {
+body main .slideShow .wrapper .next,
+body main .slideShow .wrapper .prev {
   width: 40px;
   height: 48px;
   position: absolute;
@@ -161,62 +145,54 @@ body main .slideShow .prev {
   font-size: 24px;
   text-align: center;
 }
-body main .slideShow .next:after,
-body main .slideShow .prev:after {
-  content: "";
-  display: block;
-  width: 16px;
-  height: 16px;
-  position: absolute;
-}
-body main .slideShow .next i,
-body main .slideShow .prev i {
-  padding: 16px 8px;
-  background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 8px;
-}
-body main .slideShow .next i:hover,
-body main .slideShow .prev i:hover {
-  transition: all 0.4s;
+body main .slideShow .wrapper .next i,
+body main .slideShow .wrapper .prev i {
+  padding: 8px;
   background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 8px;
   color: #fff;
 }
-body main .slideShow .next {
-  right: 16px;
+body main .slideShow .wrapper .next i:hover,
+body main .slideShow .wrapper .prev i:hover {
+  transition: all 0.4s;
+  background-color: black;
 }
-body main .slideShow .prev {
-  left: 16px;
+body main .slideShow .wrapper .next {
+  right: 8px;
 }
-body main .slideShow .slider {
+body main .slideShow .wrapper .prev {
+  left: 8px;
+}
+body main .slideShow .wrapper .slider {
   width: 400vw;
   display: flex;
   margin: 0 auto;
 }
-body main .slideShow .slider1 {
+body main .slideShow .wrapper .slider1 {
   transition: transform 1s;
 }
-body main .slideShow .slider2 {
+body main .slideShow .wrapper .slider2 {
   transition: transform 1s;
 }
-body main .slideShow .slider3 {
+body main .slideShow .wrapper .slider3 {
   transition: transform 1s;
 }
-body main .slideShow .slider4 {
+body main .slideShow .wrapper .slider4 {
   transition: transform 1s;
 }
-body main .slideShow .slider1 {
+body main .slideShow .wrapper .slider1 {
   transform: translateX(0);
 }
-body main .slideShow .slider2 {
+body main .slideShow .wrapper .slider2 {
   transform: translateX(-100vw);
 }
-body main .slideShow .slider3 {
+body main .slideShow .wrapper .slider3 {
   transform: translateX(-200vw);
 }
-body main .slideShow .slider4 {
+body main .slideShow .wrapper .slider4 {
   transform: translateX(-300vw);
 }
-body main .slideShow .content {
+body main .slideShow .wrapper .content {
   width: 100%;
   max-width: 100vw;
   height: 600px;
@@ -224,13 +200,13 @@ body main .slideShow .content {
   justify-content: center;
   align-items: center;
 }
-body main .slideShow .content img {
+body main .slideShow .wrapper .content img {
   width: 100vw;
   height: 100%;
   -o-object-fit: fill;
      object-fit: fill;
 }
-body main .slideShow .indicator {
+body main .slideShow .wrapper .indicator {
   width: 100%;
   position: absolute;
   bottom: 10px;
@@ -239,7 +215,7 @@ body main .slideShow .indicator {
   justify-content: center;
   align-items: center;
 }
-body main .slideShow .indicator li {
+body main .slideShow .wrapper .indicator li {
   width: 8px;
   height: 8px;
   border-radius: 50%;
@@ -250,8 +226,57 @@ body main .slideShow .indicator li {
   margin-right: 10px;
   cursor: pointer;
 }
-body main .slideShow #list1 {
+body main .slideShow .wrapper #list1 {
   background-color: #000;
+}
+body main .search .search_header {
+  position: relative;
+  background: #000;
+  color: #fff;
+  font-size: 16px;
+}
+body main .search .search_header ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main .search .search_header ul li {
+  list-style: none;
+  padding: 16px 24px;
+}
+body main .search .search_bar {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 16px;
+}
+body main .search .search_bar .search_bar {
+  outline: 0;
+  height: 50px;
+  padding: 0 10px;
+  border: 2px solid #7fbfff;
+  border-radius: 8px 0 0 8px;
+  background: #eee;
+}
+body main .search .search_bar .search_btn {
+  width: 70px;
+  height: 54px;
+  position: absolute;
+  right: 0;
+  top: 16px;
+  border-radius: 0 8px 8px 0;
+  border: none;
+  background: #7fbfff;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+body main .search .search_bar .search_btn:hover {
+  transition: all 0.3s;
+  color: #666;
+  background: rgba(127, 191, 255, 0.5);
+  cursor: pointer;
 }
 body main .information {
   margin: 56px 0;
@@ -260,7 +285,7 @@ body main .information .infoItem {
   margin: 16px;
   padding: 16px;
   border-radius: 8px;
-  border: 1px solid blue;
+  border: 1px solid #7fbfff;
   color: #4473a5;
   background: #cfe1fb;
 }
