--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@ header {
     }
     .cart {
       position: absolute;
-      top: 0;
+      top: 4px;
       right: 10px;
       font-size: 32px;
       a {
@@ -157,22 +157,6 @@ header {
 body {
   position: relative;
   top: 70px;
-  .second_header {
-    position: relative;
-    top: 64px;
-    background: #000;
-    color: #fff;
-    font-size: 16px;
-    ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      li {
-        list-style: none;
-        padding: 16px;
-      }
-    }
-  }
   main {
     .slideShow {
       .wrapper {
@@ -181,99 +165,143 @@ body {
         width: 100%;
         position: relative;
         height: 600px;
-      }
-      .next,
-      .prev {
-        width: 40px;
-        height: 48px;
-        position: absolute;
-        bottom: 50%;
-        transition: all 0.3s;
-        z-index: 10;
-        cursor: pointer;
-        font-size: 24px;
-        text-align: center;
-        &:after {
-          content: "";
-          display: block;
-          width: 16px;
-          height: 16px;
+        .next,
+        .prev {
+          width: 40px;
+          height: 48px;
           position: absolute;
-        }
-        i {
-          padding: 16px 8px;
-          background-color: rgba($color: #000000, $alpha: 0.3);
-          border-radius: 8px;
-          &:hover {
-            transition: all 0.4s;
+          bottom: 50%;
+          transition: all 0.3s;
+          z-index: 10;
+          cursor: pointer;
+          font-size: 24px;
+          text-align: center;
+          i {
+            padding: 8px;
             background-color: rgba($color: #000000, $alpha: 0.6);
+            border-radius: 8px;
             color: #fff;
+            &:hover {
+              transition: all 0.4s;
+              background-color: rgba($color: #000000, $alpha: 1);
+            }
+          }
+        }
+        .next {
+          right: 8px;
+        }
+        .prev {
+          left: 8px;
+        }
+        .slider {
+          width: 400vw;
+          display: flex;
+          margin: 0 auto;
+        }
+        @for $i from 1 through 4 {
+          .slider#{$i} {
+            transition: transform 1s;
+          }
+        }
+        .slider1 {
+          transform: translateX(0);
+        }
+        .slider2 {
+          transform: translateX(-100vw);
+        }
+        .slider3 {
+          transform: translateX(-200vw);
+        }
+        .slider4 {
+          transform: translateX(-300vw);
+        }
+        .content {
+          width: 100%;
+          max-width: 100vw;
+          height: 600px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img {
+            width: 100vw;
+            height: 100%;
+            object-fit: fill;
+          }
+        }
+        .indicator {
+          width: 100%;
+          position: absolute;
+          bottom: 10px;
+          display: flex;
+          z-index: 10;
+          justify-content: center;
+          align-items: center;
+          li {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            position: relative;
+            list-style: none;
+            border: 1px #000 solid;
+            margin-left: 10px;
+            margin-right: 10px;
+            cursor: pointer;
+          }
+        }
+        #list1 {
+          background-color: #000;
+        }
+      }
+    }
+    .search {
+      .search_header {
+        position: relative;
+        background: #000;
+        color: #fff;
+        font-size: 16px;
+        ul {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          li {
+            list-style: none;
+            padding: 16px 24px;
           }
         }
       }
-      .next {
-        right: 16px;
-      }
-      .prev {
-        left: 16px;
-      }
-      .slider {
-        width: 400vw;
-        display: flex;
+      .search_bar {
+        width: 80%;
         margin: 0 auto;
-      }
-      @for $i from 1 through 4 {
-        .slider#{$i} {
-          transition: transform 1s;
+        position: relative;
+        margin-top: 16px;
+        .search_bar {
+          outline: 0;
+          height: 50px;
+          padding: 0 10px;
+          border: 2px solid #7fbfff;
+          border-radius: 8px 0 0 8px;
+          background:#eee;
         }
-      }
-      .slider1 {
-        transform: translateX(0);
-      }
-      .slider2 {
-        transform: translateX(-100vw);
-      }
-      .slider3 {
-        transform: translateX(-200vw);
-      }
-      .slider4 {
-        transform: translateX(-300vw);
-      }
-      .content {
-        width: 100%;
-        max-width: 100vw;
-        height: 600px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {
-          width: 100vw;
-          height: 100%;
-          object-fit: fill;
+        .search_btn {
+          width: 70px;
+          height: 54px;
+          position: absolute;
+          right: 0;
+          top: 16px;
+          border-radius: 0 8px 8px 0;
+          border: none;
+          background: #7fbfff;
+          color: #fff;
+          font-weight: bold;
+          font-size: 16px;
+          letter-spacing: 2px;
+          &:hover {
+            transition: all 0.3s;
+            color: #666;
+            background: rgba($color: #7fbfff, $alpha: 0.5);
+            cursor: pointer;
+          }
         }
-      }
-      .indicator {
-        width: 100%;
-        position: absolute;
-        bottom: 10px;
-        display: flex;
-        z-index: 10;
-        justify-content: center;
-        align-items: center;
-        li {
-          width: 8px;
-          height: 8px;
-          border-radius: 50%;
-          position: relative;
-          list-style: none;
-          border: 1px #000 solid;
-          margin-left: 10px;
-          margin-right: 10px;
-          cursor: pointer;
-        }
-      }
-      #list1 {
-        background-color: #000;
       }
     }
     .information {
@@ -282,7 +310,7 @@ body {
         margin: 16px;
         padding: 16px;
         border-radius: 8px;
-        border: 1px solid blue;
+        border: 1px solid #7fbfff;
         color: #4473a5;
         background: #cfe1fb;
         .date {
