--- a/css/main.css
+++ b/css/main.css
@@ -245,38 +245,38 @@ body main .search .search_header ul li {
   padding: 16px 24px;
 }
 body main .search .search_bar {
-  width: 80%;
-  margin: 0 auto;
-  position: relative;
-  margin-top: 16px;
+  text-align: center;
+  margin-top: 48px;
 }
-body main .search .search_bar .search_bar {
-  outline: 0;
-  height: 50px;
-  padding: 0 10px;
+body main .search .search_bar .search_container {
+  box-sizing: border-box;
+}
+body main .search .search_bar .search_container input {
   border: 2px solid #7fbfff;
-  border-radius: 8px 0 0 8px;
+}
+body main .search .search_bar .search_container input[type=text] {
+  width: 50%;
   background: #eee;
+  border-right: none;
+  border-radius: 32px 0 0 32px;
+  outline: 0;
+  padding: 16px;
 }
-body main .search .search_bar .search_btn {
-  width: 70px;
-  height: 54px;
-  position: absolute;
-  right: 0;
-  top: 16px;
-  border-radius: 0 8px 8px 0;
-  border: none;
-  background: #7fbfff;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  letter-spacing: 2px;
-}
-body main .search .search_bar .search_btn:hover {
-  transition: all 0.3s;
-  color: #666;
-  background: rgba(127, 191, 255, 0.5);
+body main .search .search_bar .search_container input[type=submit] {
   cursor: pointer;
+  font-family: FontAwesome;
+  border-left: none;
+  border-radius: 0 32px 32px 0;
+  color: #969696;
+  outline: none;
+  font-size: 21px;
+  padding: 16px 24px;
+  vertical-align: middle;
+}
+body main .search .search_bar .search_container input[type=submit]:hover {
+  color: #fff;
+  background: #3879D9;
+  transition: all 0.3s;
 }
 body main .information {
   margin: 56px 0;
