feat: 細かなレイアウトの調整を行った
Message body
メインのコンテンツ作成に着手していく

Message footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -274,31 +274,32 @@ body {
         margin-top: 48px;
         .search_container {
           box-sizing: border-box;
-          input {
+          input,
+          button {
             border: 2px solid #7fbfff;
-            &[type="text"] {
-              width: 50%;
-              background: #eee;
-              border-right: none;
-              border-radius: 32px 0 0 32px;
-              outline: 0;
-              padding: 16px;
-            }
-            &[type="submit"] {
-              cursor: pointer;
-              font-family: FontAwesome;
-              border-left: none;
-              border-radius: 0 32px 32px 0;
-              color: #969696;
-              outline : none;
-              font-size: 21px;
-              padding: 16px 24px;
-              vertical-align: middle;
-              &:hover {
-                color: #fff;
-                background: #3879D9;
-                transition: all 0.3s;
-              }
+            outline: 0;
+            font-size: 16px;
+            padding: 12px 24px;
+          }
+          input {
+            width: 50%;
+            background: #eee;
+            border-right: none;
+            border-radius: 32px 0 0 32px;
+          }
+          button {
+            cursor: pointer;
+            font-family: FontAwesome;
+            border-left: none;
+            border-radius: 0 32px 32px 0;
+            color: #969696;
+            margin-left: -6px;
+            background: rgba($color: #7fbfff, $alpha: 0.5);
+            // vertical-align: middle;
+            &:hover {
+              color: #fff;
+              background: #3879D9;
+              transition: all 0.3s;
             }
           }
         }
