--- a/css/main.css
+++ b/css/main.css
@@ -251,29 +251,29 @@ body main .search .search_bar {
 body main .search .search_bar .search_container {
   box-sizing: border-box;
 }
-body main .search .search_bar .search_container input {
+body main .search .search_bar .search_container input,
+body main .search .search_bar .search_container button {
   border: 2px solid #7fbfff;
+  outline: 0;
+  font-size: 16px;
+  padding: 12px 24px;
 }
-body main .search .search_bar .search_container input[type=text] {
+body main .search .search_bar .search_container input {
   width: 50%;
   background: #eee;
   border-right: none;
   border-radius: 32px 0 0 32px;
-  outline: 0;
-  padding: 16px;
 }
-body main .search .search_bar .search_container input[type=submit] {
+body main .search .search_bar .search_container button {
   cursor: pointer;
   font-family: FontAwesome;
   border-left: none;
   border-radius: 0 32px 32px 0;
   color: #969696;
-  outline: none;
-  font-size: 21px;
-  padding: 16px 24px;
-  vertical-align: middle;
+  margin-left: -6px;
+  background: rgba(127, 191, 255, 0.5);
 }
-body main .search .search_bar .search_container input[type=submit]:hover {
+body main .search .search_bar .search_container button:hover {
   color: #fff;
   background: #3879D9;
   transition: all 0.3s;
