--- a/css/main.css
+++ b/css/main.css
@@ -256,22 +256,25 @@ body main .search .search_bar .search_container button {
   border: 2px solid #7fbfff;
   outline: 0;
   font-size: 16px;
-  padding: 8px 24px;
   vertical-align: middle;
 }
 body main .search .search_bar .search_container input {
   width: 50%;
+  max-width: 320px;
   background: #eee;
   border-right: none;
   border-radius: 32px 0 0 32px;
+  padding: 12px 24px;
 }
 body main .search .search_bar .search_container button {
   border-left: none;
   border-radius: 0 32px 32px 0;
   color: #969696;
   margin-left: -6px;
+  padding: 6px 24px;
   background: rgba(127, 191, 255, 0.5);
   transition: all 0.3s;
+  font-size: 24px;
 }
 body main .search .search_bar .search_container button:hover {
   cursor: pointer;
@@ -279,7 +282,8 @@ body main .search .search_bar .search_container button:hover {
   background: #3879D9;
 }
 body main .information {
-  margin: 56px 0;
+  margin: 56px auto;
+  max-width: 640px;
 }
 body main .information .infoItem {
   margin: 16px;
