--- a/css/main.css
+++ b/css/main.css
@@ -229,9 +229,11 @@ body main .slideShow .wrapper #list1 {
 }
 body main .search .search_header {
   position: relative;
-  background: #000;
-  color: #fff;
+  background: #eee;
+  color: #555;
   font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 body main .search .search_header ul {
   display: flex;
@@ -244,7 +246,7 @@ body main .search .search_header ul li {
 }
 body main .search .search_bar {
   text-align: center;
-  margin-top: 48px;
+  padding: 48px 0;
 }
 body main .search .search_bar .search_container {
   box-sizing: border-box;
@@ -384,7 +386,7 @@ body main .styling #mirror-content {
   content: "";
   width: 100%;
   height: 100%;
-  background-image: url(https://data.whicdn.com/images/251238216/original.gif);
+  background-image: url(https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/coordinate/2211/22110801.jpg?_ex=500x500&s=2&r=1);
   background-position: center center;
   background-size: auto 100%;
   background-repeat: no-repeat;
@@ -398,7 +400,7 @@ body main .styling #mirror-content {
 }
 body main .styling #mirror-content:before {
   position: absolute;
-  content: "「 ｃｌｉｃｋ ｍｅ 」";
+  content: "click me";
   font-family: sans-serif;
   text-transform: uppercase;
   color: #e7e4df;
@@ -407,11 +409,12 @@ body main .styling #mirror-content:before {
   font-size: 10px;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   text-align: center;
-  bottom: 0;
+  bottom: 8px;
   z-index: 100;
-  opacity: 0.6;
   transition: all 0.5s ease;
-  padding: 18px 0;
+  padding: 16px;
+  background: #000;
+  border-radius: 32px;
 }
 
 footer {
@@ -424,9 +427,10 @@ footer {
   text-align: center;
   color: #fff;
   letter-spacing: 2px;
-  font-size: 10px;
+  font-size: 9px;
 }
 footer a {
+  font-size: 9px;
   text-decoration: none;
   color: #fff;
 }
