--- a/css/main.scss
+++ b/css/main.scss
@@ -257,9 +257,11 @@ body {
     .search {
       .search_header {
         position: relative;
-        background: #000;
-        color: #fff;
+        background: #eee;
+        color: #555;
         font-size: 16px;
+        font-weight: bold;
+        letter-spacing: 2px;
         ul {
           display: flex;
           justify-content: center;
@@ -272,7 +274,7 @@ body {
       }
       .search_bar {
         text-align: center;
-        margin-top: 48px;
+        padding: 48px 0;
         .search_container {
           box-sizing: border-box;
           input,
@@ -333,7 +335,6 @@ body {
       display: flex;
       justify-content: center;
       background: #bd979f;
-      
       .scene {
         width: 100%;
         position: relative;
@@ -345,7 +346,6 @@ body {
         align-items: flex-end;
         perspective: 500px;
       }
-      
       .item {
         position: absolute;
         background-repeat: no-repeat;
@@ -353,7 +353,6 @@ body {
         background-position: left top;
         pointer-events: none;
       }
-      
       #plant {
         background-image: url(https://ouch-cdn2.icons8.com/CZaKIJ63jjlgvDcdjcjUnlfpffRScIiXzi4HMrpLAsM/rs:fit:728:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNjM2/L2RkMzRmMzVhLWVk/YmMtNDRlZi1hOGNm/LTZlZjJlMTBlMzU2/My5wbmc.png);
         width: 500px;
@@ -361,7 +360,6 @@ body {
         bottom: -26px;
         margin-right: 400px;
       }
-      
       #plant-2 {
         background-image: url(https://ouch-cdn2.icons8.com/E47kcuNp_3-4IrDybcMwr6zMELcbhBQLKzImj-ot8E4/rs:fit:855:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzE5/LzljNjEwNjJhLTk4/YmMtNDViMS1iZGVm/LTMwNzVjMTMxYjQ1/OC5wbmc.png);
         width: 300px;
@@ -369,7 +367,6 @@ body {
         bottom: -50px;
         margin-right: 300px;
       }
-      
       #plant-3 {
         background-image: url(https://ouch-cdn2.icons8.com/oo4nsgAN74wL_FDHCUIwOdB3rPN6SGavRjxiz-1ds4s/rs:fit:1201:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMTk0/LzVlMGQ1NjhlLWNh/NTEtNGJlNC1iNWEz/LTQyYTcwNDlmZGMy/My5wbmc.png);
         width: 160px;
@@ -377,7 +374,6 @@ body {
         bottom: -50px;
         margin-left: 380px;
       }
-      
       #books {
         background-image: url(https://ouch-cdn2.icons8.com/AUAdQ5eK8APXniP0hwVusHWtZRMk9FA2Jm9FSza1StY/rs:fit:850:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvNy9j/NTcxMWIzNC1mMTYy/LTQ3MTAtOGExYi1l/YzY1M2FlN2IwYWYu/cG5n.png);
         width: 200px;
@@ -385,7 +381,6 @@ body {
         bottom: -40px;
         margin-left: 620px;
       }
-      
       #apple {
         background-image: url(https://ouch-cdn2.icons8.com/-O2SifADepTOg7bXJ5whR6wB0iMfq5y7vrIaJdmKp20/rs:fit:851:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvODYy/L2M3MjBkM2Q3LWMw/NTgtNDJkOC04ZGEw/LTc2MTM1N2YwMmNh/OC5wbmc.png);
         width: 64px;
@@ -393,7 +388,6 @@ body {
         top: -64px;
         left: 30px;
       }
-      
       #clock {
         background-image: url(https://ouch-cdn2.icons8.com/ggxsAQVGAa4GMIlNl6vMuk0ANcEK07E5woeRpplKofI/rs:fit:945:912/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzI0/L2RmMDQzMzc4LTcy/NTUtNDA5My04ZDQy/LTgxOTJjNmE2ZmQx/ZC5wbmc.png);
         width: 170px;
@@ -403,7 +397,6 @@ body {
         bottom: 520px;
         margin-left: 440px;
       }
-      
       #mirror {
         width: 280px;
         height: 580px;
@@ -416,13 +409,12 @@ body {
         transform: rotateX(3deg);
         cursor: pointer;
       }
-      
       #mirror-content {
         position: absolute;
         content: "";
         width: 100%;
         height: 100%;
-        background-image: url(https://data.whicdn.com/images/251238216/original.gif);
+        background-image: url(https://thumbnail.image.rakuten.co.jp/@0_mall/e-zakkamania/cabinet/coordinate/2211/22110801.jpg?_ex=500x500&s=2&r=1);
         background-position: center center;
         background-size: auto 100%;
         background-repeat: no-repeat;
@@ -433,24 +425,25 @@ body {
         z-index: 0;
         display: flex;
         justify-content: center;
-      }
-      
-      #mirror-content:before {
-        position: absolute;
-        content: "「 ｃｌｉｃｋ ｍｅ 」";
-        font-family: sans-serif;
-        text-transform: uppercase;
-        color: #e7e4df;
-        font-weight: bold;
-        letter-spacing: 4px;
-        font-size: 10px;
-        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
-        text-align: center;
-        bottom: 0;
-        z-index: 100;
-        opacity: 0.6;
-        transition: all 0.5s ease;
-        padding: 18px 0;
+        &:before {
+          position: absolute;
+          content: "click me";
+          font-family: sans-serif;
+          text-transform: uppercase;
+          color: #e7e4df;
+          font-weight: bold;
+          letter-spacing: 4px;
+          font-size: 10px;
+          text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+          text-align: center;
+          bottom: 8px;
+          z-index: 100;
+          // opacity: 0.6;
+          transition: all 0.5s ease;
+          padding: 16px;
+          background: #000;
+          border-radius: 32px;
+        }
       }
     }
   } 
@@ -464,8 +457,9 @@ footer {
   text-align: center;
   color: #fff;
   letter-spacing: 2px;
-  font-size: 10px;
+  font-size: 9px;
   a {
+    font-size: 9px;
     text-decoration: none;
     color: #fff;
   }
