--- a/css/myPage.css
+++ b/css/myPage.css
@@ -67,12 +67,42 @@ body .myPage_mainItem .guide a:hover {
   background: none;
   color: #000;
 }
+body .contents {
+  margin: 16px auto 0;
+  text-align: center;
+}
+body .contents .contentsTitle {
+  color: #555;
+  letter-spacing: 4px;
+}
+body .contents .contentsTitle p:first-child {
+  font-size: 20px;
+}
+body .contents .contentsTitle p:nth-child(3) {
+  width: 80px;
+  margin: 8px auto;
+  border: 1px solid #000;
+  border-radius: 16px;
+}
+body .contents .contentsItem {
+  display: flex;
+}
+body .contents .contentsItem img {
+  width: 120px;
+  height: 120px;
+  margin: 16px;
+  border-radius: 50%;
+  transition: all 0.4s;
+}
+body .contents .contentsItem img:hover {
+  opacity: 0.8;
+}
 body .sns {
   display: flex;
   margin: 0 auto;
 }
 body .sns .snsItem {
-  margin: 0 16px;
+  margin: 0 16px 32px;
   font-size: 32px;
 }
 body .sns .snsItem i,
