--- a/css/myPage.scss
+++ b/css/myPage.scss
@@ -53,6 +53,9 @@ body {
           color: #ed6589;
         }
       }
+      .books {
+        padding: 16px 85px;
+      }
     }
     .guide {
       margin: 16px auto;
