--- a/css/main.scss
+++ b/css/main.scss
@@ -420,7 +420,7 @@ body {
         z-index: 0;
         display: flex;
         justify-content: center;
-        &:before {
+        &:after {
           position: absolute;
           content: "click me";
           font-family: sans-serif;
@@ -441,29 +441,28 @@ body {
         }
       }
     }
-    .styleMore {
+    .stylingMore {
       position: relative;
-      left: 4px;
-      bottom: 72px;
-      width: fit-content;
-      letter-spacing: 2px;
+      top: 760px;
       text-align: center;
-      color: #fff;
-      background: #333;
-      margin: 0 auto;
-      padding: 16px 32px;
-      border-radius: 8px;
+      z-index: 1;
+      a {
+        text-decoration: none;
+        color: #eee;
+        background: #444;
+        padding: 16px 24px;
+        border-radius: 8px;
+      }
     }
   } 
   .contents {
     margin: 0 auto;
     text-align: center;
     .contentsItem {
-      margin: 0 auto 32px;
+      min-height: 160px;
+      padding-top: 16px;
     }
     .newItem {
-      margin-bottom: -8px;
-      padding: 32px 0;
       background: #bd979f;
     }
   }
